# kate

./: .gitignore  README.md  diag_ig.bat  diag_ig_epics.py  diag_ig_stream_proof.py  diag_ig_streaming.py  diag_ig_today_epics.py  monitor-wrapper-local.bat  pyproject.toml  run-kate-local.bat  run-nt-mesu26-smoke.bat  run_diag_ig.bat  run_supervisor.bat  run_supervisor_ig.bat  run_supervisor_ny.bat
analysis/: fx_london_initial_entry_30d.py  fx_session_net_cost_backtest.py  orb-free-data-nq-5m-both-rr25-max250-metrics.json  orb-free-data-nq-5m-both-rr25-metrics.json  orb-free-data-nq-5m-long-max250-metrics.json  orb-free-data-nq-5m-long-metrics.json  orb-free-data-rty-5m-both-rr25-metrics.json  orb-free-data-rty-5m-long-metrics.json  orb-free-data-validation-2026-05-08-results.md  orb-mes-asian-both-rr25-metrics.json  orb-mes-asian-long-rr20-metrics.json  orb-mes-europe-both-rr25-metrics.json  orb-mes-europe-long-rr20-metrics.json  orb-mes-multi-session-2026-05-09-results.md  orb-mes-multi-session-portfolio-2026-05-09.py  orb-mes-portfolio-all-both-rr25-metrics.json  orb-mes-portfolio-all-long-rr20-metrics.json  orb-mes-portfolio-asian-us-both-rr25-metrics.json  orb-mes-portfolio-asian-us-long-rr20-metrics.json  orb-mes-us-long-rr20-control-metrics.json  orb-multi-symbol-extension-2026-05-08-results.md  orb-vectorbt-prototype-2026-05-08-metrics.json  orb-vectorbt-prototype-2026-05-08-results.md  orb-vectorbt-prototype-2026-05-08-rr15-metrics.json  orb-vectorbt-prototype-2026-05-08-rr25-metrics.json  orb-vectorbt-prototype-2026-05-08-short-metrics.json  (+23 more)
config/: risk.json  (+1 more)
(+107 files in other folders)
