[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.0.1"
description = "Deterministic trading bot — Sierra Chart + DTC binary + Teton CME → EdgeClear E8933"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
rithmic = [
    "async-rithmic==1.5.10",
    "pytz>=2024.1",
]
mt5 = [
    "MetaTrader5>=5.0.45",
]
ig = [
    "requests>=2.31",
    "lightstreamer-client-lib==2.2.2",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trading_bot*"]
